--- a/electron/package.json
+++ b/electron/package.json
@@ -4,11 +4,22 @@
   "description": "An application to help estimating projects",
   "main": "main.js",
   "scripts": {
-      "start": "npx electron ."
+    "start": "npx webpack && npx electron ."
   },
   "author": "Anders K",
   "license": "MIT",
   "devDependencies": {
-    "electron": "^11.2.0"
+    "@babel/core": "^7.12.10",
+    "@babel/plugin-proposal-export-default-from": "^7.12.1",
+    "babel-loader": "^8.2.2",
+    "electron": "^11.2.0",
+    "html-webpack-plugin": "^4.5.1",
+    "vue-loader": "^15.9.6",
+    "vue-template-compiler": "^2.6.12",
+    "webpack": "^5.14.0",
+    "webpack-cli": "^4.3.1"
+  },
+  "dependencies": {
+    "vue": "^2.6.12"
   }
 }
