--- a/package.json
+++ b/package.json
@@ -3,9 +3,7 @@
   "description": "A base for tools to help estimating projects",
   "private": "true",
   "scripts": {
-    "test": "npx jasmine",
-    "cli": "cd cli && npm start",
-    "electron": "cd electron && npm start"
+    "test": "npx jasmine"
   },
   "repository": {
     "type": "git",
@@ -18,6 +16,18 @@
   },
   "homepage": "https://github.com/and3k5/estimate-calc#readme",
   "devDependencies": {
-    "jasmine": "^3.6.3"
+    "@babel/core": "^7.12.10",
+    "@babel/plugin-proposal-export-default-from": "^7.12.1",
+    "babel-loader": "^8.2.2",
+    "electron": "^11.2.0",
+    "html-webpack-plugin": "^4.5.1",
+    "jasmine": "^3.6.3",
+    "vue-loader": "^15.9.7",
+    "vue-template-compiler": "^2.6.12",
+    "webpack": "^5.14.0",
+    "webpack-cli": "^4.3.1"
+  },
+  "dependencies": {
+    "vue": "^2.6.12"
   }
 }
