--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "description": "A base for tools to help estimating projects",
   "private": "true",
   "scripts": {
-    "test": "npx jasmine",
+    "test": "npx karma start",
     "build": "npx webpack --mode production"
   },
   "repository": {
@@ -23,6 +23,13 @@
     "electron": "^11.2.0",
     "html-webpack-plugin": "^4.5.1",
     "jasmine": "^3.6.3",
+    "karma": "^6.3.19",
+    "karma-chrome-launcher": "^3.1.1",
+    "karma-cli": "^2.0.0",
+    "karma-jasmine": "^5.0.0",
+    "karma-webpack": "^5.0.0",
+    "ts-loader": "^9.3.0",
+    "typescript": "^4.6.4",
     "vue-loader": "^15.9.8",
     "vue-template-compiler": "^2.6.14",
     "webpack": "^5.72.1",
