--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "private": "true",
   "scripts": {
     "test": "npx karma start",
-    "build": "npx webpack --mode production"
+    "build": "npx webpack --mode production",
+    "lint": "npx eslint src",
+    "lint-fix": "npx eslint src --fix"
   },
   "repository": {
     "type": "git",
@@ -19,8 +21,13 @@
   "devDependencies": {
     "@babel/core": "^7.12.10",
     "@babel/plugin-proposal-export-default-from": "^7.12.1",
+    "@typescript-eslint/eslint-plugin": "^5.23.0",
     "babel-loader": "^8.2.2",
     "electron": "^11.2.0",
+    "eslint": "^8.15.0",
+    "eslint-plugin-typescript": "^0.14.0",
+    "eslint-plugin-unused-imports": "^2.0.0",
+    "eslint-plugin-vue": "^8.7.1",
     "html-webpack-plugin": "^4.5.1",
     "jasmine": "^3.6.3",
     "karma": "^6.3.19",
