--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "karma-cli": "^2.0.0",
     "karma-jasmine": "^5.0.0",
     "karma-webpack": "^5.0.0",
+    "puppeteer": "^19.2.2",
     "ts-loader": "^9.3.0",
     "typescript": "^4.6.4",
     "vue-loader": "^15.9.8",
