--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,9 +6,15 @@ name: Deploy web version to gh-pages
 on:
   push:
     branches: [ main ]
+  pull_request:
+    branches:
+      - main
+    types:
+      - closed
 
 jobs:
   deploy:
+    if: github.event_name == "push" || (github.event_name == "pull_request" && github.event.pull_request.merged == true)
     runs-on: ubuntu-latest
 
     steps:
