--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "test": "npx karma start",
     "build": "npx webpack --mode production",
     "lint": "npx eslint src",
-    "lint-fix": "npx eslint src --fix"
+    "lint-fix": "npx eslint src --fix",
+    "start": "npx http-server dist"
   },
   "repository": {
     "type": "git",
@@ -29,6 +30,7 @@
     "eslint-plugin-unused-imports": "^2.0.0",
     "eslint-plugin-vue": "^8.7.1",
     "html-webpack-plugin": "^4.5.1",
+    "http-server": "^14.1.1",
     "jasmine": "^3.6.3",
     "karma": "^6.3.19",
     "karma-chrome-launcher": "^3.1.1",
