--- a/package.json
+++ b/package.json
@@ -23,12 +23,13 @@
     "@babel/core": "^7.12.10",
     "@babel/plugin-proposal-export-default-from": "^7.12.1",
     "@typescript-eslint/eslint-plugin": "^5.23.0",
+    "@vue/eslint-config-typescript": "^11.0.2",
     "babel-loader": "^8.2.2",
     "electron": "^22.0.0",
     "eslint": "^8.15.0",
     "eslint-plugin-typescript": "^0.14.0",
     "eslint-plugin-unused-imports": "^2.0.0",
-    "eslint-plugin-vue": "^8.7.1",
+    "eslint-plugin-vue": "^9.11.0",
     "html-webpack-plugin": "^4.5.1",
     "http-server": "^14.1.1",
     "jasmine": "^3.6.3",
@@ -41,11 +42,11 @@
     "ts-loader": "^9.3.0",
     "typescript": "^4.6.4",
     "vue-loader": "^15.9.8",
-    "vue-template-compiler": "^2.6.14",
+    "vue-template-compiler": "^2.7.14",
     "webpack": "^5.76.0",
     "webpack-cli": "^4.3.1"
   },
   "dependencies": {
-    "vue": "^2.6.14"
+    "vue": "^2.7.14"
   }
 }
