--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,14 @@
         "emitDecoratorMetadata": true,
         "lib": [
             "ES2020"
+        ],
+    },
+    "vueCompilerOptions": {
+        "target": 2.7,
+        "extensions": [
+            ".vue"
         ]
-    }
+    },
+    "include": ["src/**/*.js","src/**/*.ts"],
+    "exclude": ["src/web/**/*.js","src/web/**/*.ts"]
 }
