update to vue 3.1 (migration build)

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,11 +18,11 @@
         ],
     },
     "vueCompilerOptions": {
-        "target": 2.7,
+        "target": 3,
         "extensions": [
             ".vue"
         ]
     },
     "include": ["src/**/*.js","src/**/*.ts"],
-    "exclude": ["src/web/**/*.js","src/web/**/*.ts"]
+    "exclude": ["src/web/**/*.js","src/web/**/*.ts","node_modules"]
 }
