--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "@babel/core": "^7.12.10",
     "@babel/plugin-proposal-export-default-from": "^7.12.1",
     "@typescript-eslint/eslint-plugin": "^5.23.0",
+    "@vue/compiler-sfc": "^3.1.0",
     "@vue/eslint-config-typescript": "^11.0.2",
     "babel-loader": "^8.2.2",
+    "css-loader": "^6.7.3",
     "electron": "^22.0.0",
     "eslint": "^8.15.0",
     "eslint-plugin-typescript": "^0.14.0",
@@ -41,12 +43,13 @@
     "puppeteer": "^19.2.2",
     "ts-loader": "^9.3.0",
     "typescript": "^4.6.4",
-    "vue-loader": "^15.9.8",
-    "vue-template-compiler": "^2.7.14",
+    "vue-loader": "^16.8.3",
+    "vue-style-loader": "^4.1.3",
     "webpack": "^5.76.0",
     "webpack-cli": "^4.3.1"
   },
   "dependencies": {
-    "vue": "^2.7.14"
+    "@vue/compat": "^3.1.0",
+    "vue": "^3.1.0"
   }
 }
