--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "eslint-plugin-typescript": "^0.14.0",
     "eslint-plugin-unused-imports": "^2.0.0",
     "eslint-plugin-vue": "^9.11.0",
-    "html-webpack-plugin": "^4.5.1",
+    "html-webpack-plugin": "^5.5.1",
     "http-server": "^14.1.1",
     "jasmine": "^3.6.3",
     "karma": "^6.3.19",
@@ -41,6 +41,8 @@
     "karma-jasmine": "^5.0.0",
     "karma-webpack": "^5.0.0",
     "puppeteer": "^19.2.2",
+    "sass": "^1.62.0",
+    "sass-loader": "^13.2.2",
     "ts-loader": "^9.3.0",
     "typescript": "^4.6.4",
     "vue-loader": "^16.8.3",
@@ -49,6 +51,11 @@
     "webpack-cli": "^4.3.1"
   },
   "dependencies": {
+    "@material/button": "^14.0.0",
+    "@material/layout-grid": "^14.0.0",
+    "@material/list": "^14.0.0",
+    "@material/menu": "^14.0.0",
+    "@material/textfield": "^14.0.0",
     "@vue/compat": "^3.1.0",
     "vue": "^3.1.0"
   }
