--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,5 +24,5 @@
         ]
     },
     "include": ["src/**/*.js","src/**/*.ts"],
-    "exclude": ["src/web/**/*.js","src/web/**/*.ts","node_modules"]
+    "exclude": ["src/web/**/*.js","src/web/**/*.ts","src/web/**/*.vue","src/web/**/*.ejs","node_modules"]
 }
