--- a/package.json
+++ b/package.json
@@ -1,62 +1,66 @@
 {
-  "name": "estimate-calc",
-  "description": "A base for tools to help estimating projects",
-  "private": "true",
-  "scripts": {
-    "test": "npx karma start",
-    "build": "npx webpack --mode production",
-    "lint": "npx eslint src",
-    "lint-fix": "npx eslint src --fix",
-    "start": "npx http-server dist"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/and3k5/estimate-calc.git"
-  },
-  "author": "",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/and3k5/estimate-calc/issues"
-  },
-  "homepage": "https://github.com/and3k5/estimate-calc#readme",
-  "devDependencies": {
-    "@babel/core": "^7.12.10",
-    "@babel/plugin-proposal-export-default-from": "^7.12.1",
-    "@typescript-eslint/eslint-plugin": "^5.23.0",
-    "@vue/compiler-sfc": "^3.1.0",
-    "@vue/eslint-config-typescript": "^11.0.2",
-    "babel-loader": "^8.2.2",
-    "css-loader": "^6.7.3",
-    "electron": "^22.0.0",
-    "eslint": "^8.15.0",
-    "eslint-plugin-typescript": "^0.14.0",
-    "eslint-plugin-unused-imports": "^2.0.0",
-    "eslint-plugin-vue": "^9.11.0",
-    "html-webpack-plugin": "^5.5.1",
-    "http-server": "^14.1.1",
-    "jasmine": "^3.6.3",
-    "karma": "^6.3.19",
-    "karma-chrome-launcher": "^3.1.1",
-    "karma-cli": "^2.0.0",
-    "karma-jasmine": "^5.0.0",
-    "karma-webpack": "^5.0.0",
-    "puppeteer": "^19.2.2",
-    "sass": "^1.62.0",
-    "sass-loader": "^13.2.2",
-    "ts-loader": "^9.3.0",
-    "typescript": "^4.6.4",
-    "vue-loader": "^16.8.3",
-    "vue-style-loader": "^4.1.3",
-    "webpack": "^5.76.0",
-    "webpack-cli": "^4.3.1"
-  },
-  "dependencies": {
-    "@material/button": "^14.0.0",
-    "@material/layout-grid": "^14.0.0",
-    "@material/list": "^14.0.0",
-    "@material/menu": "^14.0.0",
-    "@material/textfield": "^14.0.0",
-    "@vue/compat": "^3.1.0",
-    "vue": "^3.1.0"
-  }
+    "name": "estimate-calc",
+    "description": "A base for tools to help estimating projects",
+    "version": "0.0.0",
+    "private": true,
+    "type": "module",
+    "engines": {
+        "node": "^20.19.0 || >=22.12.0"
+    },
+    "scripts": {
+        "dev": "vite",
+        "build": "run-p build:*",
+        "preview": "vite preview",
+        "test:unit": "vitest run",
+        "test": "run-s test:*",
+        "build-app-only": "vite build -c vite.app.config.ts",
+        "build:app": "run-p type-check \"build-app-only {@}\" --",
+        "build:calc": "vite build -c vite.calc.config.ts",
+        "type-check": "vue-tsc --build",
+        "lint:oxlint": "oxlint . --fix -D correctness --ignore-path .gitignore",
+        "lint:eslint": "eslint . --fix",
+        "lint": "run-s lint:*",
+        "format": "prettier --write src/"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/and3k5/estimate-calc.git"
+    },
+    "author": "",
+    "license": "MIT",
+    "bugs": {
+        "url": "https://github.com/and3k5/estimate-calc/issues"
+    },
+    "homepage": "https://github.com/and3k5/estimate-calc#readme",
+    "devDependencies": {
+        "@prettier/plugin-oxc": "^0.0.4",
+        "@tsconfig/node22": "^22.0.2",
+        "@types/jsdom": "^21.1.7",
+        "@types/node": "^22.16.5",
+        "@vitejs/plugin-vue": "^6.0.1",
+        "@vitest/eslint-plugin": "^1.3.4",
+        "@vue/eslint-config-prettier": "^10.2.0",
+        "@vue/eslint-config-typescript": "^14.6.0",
+        "@vue/test-utils": "^2.4.6",
+        "@vue/tsconfig": "^0.7.0",
+        "eslint": "^9.31.0",
+        "eslint-plugin-oxlint": "~1.8.0",
+        "eslint-plugin-vue": "~10.3.0",
+        "jiti": "^2.4.2",
+        "jsdom": "^26.1.0",
+        "npm-run-all2": "^8.0.4",
+        "oxlint": "~1.8.0",
+        "prettier": "3.6.2",
+        "sass-embedded": "^1.92.1",
+        "typescript": "~5.8.0",
+        "vite": "^7.0.6",
+        "vite-plugin-vue-devtools": "^8.0.0",
+        "vitest": "^3.2.4",
+        "vue-tsc": "^3.0.4"
+    },
+    "dependencies": {
+        "pinia": "^3.0.3",
+        "vue": "^3.5.18",
+        "vue-router": "^4.5.1"
+    }
 }
