--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,28 +1,14 @@
 {
-    "compilerOptions": {
-        "outDir": "./dist/",
-        "noImplicitAny": true,
-        "module": "ES2015",
-        "target": "ES2015",
-        "allowJs": false,
-        "checkJs": false,
-        "moduleResolution": "node",
-        "downlevelIteration": true,
-        "esModuleInterop": true,
-        "strict": true,
-        "noImplicitReturns": true,
-        "experimentalDecorators": true,
-        "emitDecoratorMetadata": true,
-        "lib": [
-            "ES2020"
-        ],
-    },
-    "vueCompilerOptions": {
-        "target": 3,
-        "extensions": [
-            ".vue"
-        ]
-    },
-    "include": ["src/**/*.js","src/**/*.ts"],
-    "exclude": ["src/web/**/*.js","src/web/**/*.ts","src/web/**/*.vue","src/web/**/*.ejs","node_modules"]
+    "files": [],
+    "references": [
+        {
+            "path": "./tsconfig.node.json"
+        },
+        {
+            "path": "./tsconfig.app.json"
+        },
+        {
+            "path": "./tsconfig.vitest.json"
+        }
+    ]
 }
