--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
         "node": "^20.19.0 || >=22.12.0"
     },
     "scripts": {
-        "dev": "vite",
+        "dev": "vite -c vite.app.config.ts",
         "build": "run-p build:*",
         "preview": "vite preview",
         "test:unit": "vitest run",
